# Herta-villa-SDK

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: release_configuration.json
.github/ISSUE_TEMPLATE/: api-changed.yml  bug-report.yml  feature-request.yml
.github/workflows/: release.yml  unittest.yml
examples/: README.md  event_handle.py  message_segments.py
hertasdk/: __init__.py  server.py
hertavilla/: __init__.py  bot.py  encrypt.py  event.py  exception.py  match.py  message.py  model.py  models.py  server.py  typing.py  utils.py  version.py
hertavilla/apis/: audit.py  auth.py  base.py  emoticon.py  img.py  internal.py  member.py  message.py  role.py  room.py  villa.py  websocket.py
hertavilla/message/: __init__.py  chain.py  component.py  image.py  internal.py  post.py  text.py  types.py
hertavilla/server/: __init__.py  _lifespan.py  aiohttp.py  fastapi.py  internal.py  loop.py
hertavilla/ws/: connection.py  package.py  payload.py  types.py
hertavilla/ws/pb/: command_pb2.py  command_pb2.pyi  model_pb2.py  model_pb2.pyi  robot_event_message_pb2.py  robot_event_message_pb2.pyi
protos/: command.proto  model.proto  robot_event_message.proto
tests/: test_utils.py
